# Halal_Stock_Scanner

./: .editorconfig  .gitignore  README.md  railway.json  render.yaml
backend/: .env.example  .gitignore  Dockerfile  migrate_db.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start_server.ps1  tradebot.db
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: ai.py  auth.py  dashboard.py  ipo.py  market.py  portfolio.py  scan.py
backend/app/core/: config.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  alert.py  base.py  setting.py  transaction.py  user.py  watchlist.py
backend/app/routers/: analytics.py  dashboard.py  market.py
backend/app/schemas/: user.py
backend/app/services/: ai_service.py  alert_service.py  analytics_service.py  background_tasks.py  news_service.py  settings_service.py  stock_service.py  telegram_service.py  websocket_manager.py
backend/app/services/data_provider/: base.py  factory.py  kite_provider.py  mock_provider.py  yfinance_provider.py
backend/app/utils/: auth_utils.py  cache.py  indicators.py
backend/tests/: test_auth.py  test_dashboard_utils.py
docs/: Comprehensive Software Audit & Fix Plan.md  DEPLOYMENT.md  HalalTrade Pro - Enhancement Suggestions.md  HalalTrade Pro - Product Audit & Roadmap.md  HalalTrade Pro - Updated Roadmap.md  PROVIDERS.md  refactor.md
frontend/: .env.development  .env.example  .env.production  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  (+1 more)
(+80 files in other folders)
