[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halaltrade-backend"
version = "1.0.0"
description = "HalalTrade Pro Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "yfinance>=0.2.31",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.12",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3.0",
]
